--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "parcel build public/index.html && node server.js"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.1",
     "cors": "^2.8.5",
     "dotenv": "16.0.0",
     "express": "^4.17.1",
