--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "express": "^4.17.1",
     "morgan": "1.10.0",
     "nodemon": "^2.0.19",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.0",
     "sequelize": "^6.21.4",
     "sqlite3": "^5.0.11"
   },
